test/errors/e10.gm
Procedure Foo(G: Graph, X: Int)
{
    X = 3;
    Node(G) y;
    Foreach(t: G.Nodes) {
        t = y;
    }
}
